Kotlin conversie en unit tests toevoegen (#12)
* Create dependabot.yml

* Scorecard en Maven CI toevoegen

* Maven fixes om builds mogelijk te maken

* Conversie van Java naar Kotlin

* Fix CodeQL action

* CodeQL only supports Kotlin up to 2.2.30

Only 2.2.21 is available on maven central for kotlin-stdlib.

* Eigen CodeQL configuratie is mogelijk toch nodig

* CodeQL configuratie gelijkt gemaakt aan wat via GitHub gegenereerd wordt

* CodeQL configuratie onderscheiden van default CodeQL

* OpenTelemetry object opnieuw static en opschoning

* Eerste testen toegevoegd en code geoptimaliseerd hiervoor

* Overige tests toegevoegd en tests gelijkvormig gemaakt

* Potentiële initialisatie-bug in ProcessingHandler.kt opgelost en test vereenvoudigd

* Configuratie kennis in de ConfigurationLoader.kt houden

* Review punten verwerkt

* Warnings tijdens testen opgelost

* readme.md aangepast naar Kotlin.

* Tests verplaatst naar kotlin folder